[gd_scene load_steps=7 format=2]

[ext_resource path="res://themes/main_theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/EventRecompenses.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/ui/dialogs/bg_construire.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/ui/close.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/font_infos.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/fonts/main_font.tres" type="DynamicFont" id=7]

[node name="EventResult" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 1 )
custom_constants/margin_right = 55
custom_constants/margin_top = 50
custom_constants/margin_left = 55
custom_constants/margin_bottom = 50
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="NinePatchRect" parent="."]
margin_left = 55.0
margin_top = 50.0
margin_right = 969.0
margin_bottom = 550.0
texture = ExtResource( 3 )
patch_margin_left = 11
patch_margin_top = 11
patch_margin_right = 11
patch_margin_bottom = 11

[node name="QuitButton" type="TextureButton" parent="Background"]
anchor_left = 0.984
anchor_top = 0.015
anchor_right = 0.984
anchor_bottom = 0.015
margin_left = -13.8186
margin_top = -5.80729
margin_right = 81.1815
margin_bottom = 92.1927
rect_scale = Vector2( 0.8, 0.8 )
rect_pivot_offset = Vector2( -417.231, -101.996 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollMargin" type="MarginContainer" parent="."]
margin_left = 55.0
margin_top = 50.0
margin_right = 969.0
margin_bottom = 550.0
mouse_filter = 2
custom_constants/margin_right = 60
custom_constants/margin_top = 20
custom_constants/margin_left = 60
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollMargin"]
margin_left = 60.0
margin_top = 20.0
margin_right = 854.0
margin_bottom = 480.0
mouse_filter = 2
size_flags_horizontal = 5

[node name="Title" type="Label" parent="ScrollMargin/VBoxContainer"]
margin_right = 794.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.533333, 0.282353, 0, 1 )
text = "Résultats de l'événement"
align = 1
valign = 1

[node name="PointsGained" type="Label" parent="ScrollMargin/VBoxContainer"]
margin_top = 37.0
margin_right = 794.0
margin_bottom = 68.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.533333, 0.282353, 0, 1 )
text = "Data points +..."
align = 1
valign = 1

[node name="ScrollContainer" type="ScrollContainer" parent="ScrollMargin/VBoxContainer"]
margin_top = 72.0
margin_right = 794.0
margin_bottom = 460.0
size_flags_vertical = 3
theme = ExtResource( 1 )
scroll_horizontal_enabled = false

[node name="BuildingContainer" type="GridContainer" parent="ScrollMargin/VBoxContainer/ScrollContainer"]
margin_left = 397.0
margin_right = 397.0
size_flags_horizontal = 6
size_flags_vertical = 0
custom_constants/hseparation = 0
columns = 2

[connection signal="pressed" from="Background/QuitButton" to="." method="_on_QuitButton_pressed"]
